<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/register_user_title" />
	<TableLayout android:layout_height="fill_parent"
		android:id="@+id/tableLayout1" android:layout_width="wrap_content">
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:text="@string/email" android:layout_width="wrap_content"></TextView>
			<EditText android:layout_width="wrap_content" android:inputType="textEmailAddress"
				android:layout_height="wrap_content" android:id="@+id/txtEmail" android:text="ashrafuzzaman.g2@gmail.com"></EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:text="@string/password"></TextView>
			<EditText android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/txtPass" android:password="true" android:text="123456"></EditText>

		</TableRow>
		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:text="@string/confirm_password"></TextView>
			<EditText android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/txtConfimPass" android:password="true" android:text="@string/testPass"></EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/btnRegister"
				android:text="@string/register"></Button>
			<Button android:id="@+id/btnCancel" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/cancel"></Button>
		</TableRow>
	</TableLayout>
</LinearLayout>
